# locust-performance-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Procfile  README.md  RELEASE_NOTES_v1.2.0.md  pyproject.toml  railway.toml  requirements.txt  start.sh
.github/workflows/: performance-ci.yml
docs/: auth-providers.md  baseline-comparison.md  custom-scripts.md  getting-started.md  live-dashboard.md  notifications.md  report-export.md  report-generation.md  request-correlation.md
examples/: api_load_test.py  auth_oauth2.py  baseline_comparison.py  correlated_load_test.py  generate_report.py  live_dashboard.py  notify_results.py
scripts/: push-release-v1.2.0.sh
src/locust_performance_kit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/locust_templates/: __init__.py  alerts.py  api_load.py  auth.py  baseline.py  cli.py  config.py  correlator.py  exporters.py  live_dashboard.py  metrics.py  notifications.py  report_data.py  report_generator.py  runner.py  shapes.py  soak.py  spike.py  stress.py  thresholds.py  web_ui.py
tests/: conftest.py
tests/fixtures/: sample_events.json  sample_exceptions.csv  sample_failures.csv  sample_stats.csv
tests/integration/: test_auth_integration.py  test_templates.py
tests/unit/: test_alerts.py  test_api_load.py  test_auth.py  test_baseline.py  test_cli.py  test_config.py  test_correlator.py  test_dashboard_exports.py  test_dashboard_integration.py  test_example_api_load.py  test_exporters.py  test_failure_hotspots.py  test_init.py  test_live_dashboard.py  test_metrics.py  test_notifications.py  (+9 more)
(+2 files in other folders)
